FISH-10024 Rework Concurrency TCK
Signature test still failing - but was failing already anyway post e71c61dd674fa685494911e18caebe02d1f6d112

Signed-off-by: Andrew Pielage <pandrex247@hotmail.com>